# dotfiles

./: .gitignore  .gitmodules  1  Brewfile  Brewfile.lock.json  README.md  backup-docker-images  bib2filename.py  chrony.conf  chrony.plist  devbox-global.json  download-youtube  e  emacs-setup  gitconfig  install.conf.yaml  mac_setup.sh  mac_update.sh  merge-zsh-history  mount.sh  package-lock.json  package.json  pikchr  setup-mac.sh  spacemacs  sshconfig  starship.toml  sync-to-dropbox  tag-cache-dirs  tmux.conf  zshrc  zshrc-setup
.claude/: settings.local.json
chezmoi/: .chezmoi.toml.tmpl  .chezmoiignore.tmpl  chezmoi.toml  create_dot_gitconfig.tmpl  create_dot_zshrc.tmpl  dot_gitconfig.tmpl  dot_gitignore_global  dot_gitmessage  dot_tmux.conf  dot_zprofile.tmpl  dot_zshenv  dot_zshenv.tmpl  dot_zshrc.tmpl  empty_dot_aider.model.settings.yml  empty_dot_gitconfig-lazygit  empty_dot_gitconfig.tmpl  empty_dot_gitmessage  empty_dot_zshrc.tmpl  encrypted_dot_claude.json.age  encrypted_test_secret.txt.age  executable_setup-mac.sh  run_after_90-restic-backup-xdg-sync.sh.tmpl  run_after_92-watchman-global-config.sh.tmpl  run_after_95-restic-rclone-aliases.sh.tmpl  run_after_sync-skills-to-codex.sh.tmpl  run_before_05-restic-backup-config-dir.sh.tmpl
chezmoi/dot_aws/: empty_config.tmpl
chezmoi/dot_claude/: settings.json
chezmoi/dot_claude/skills/athena-queries/: SKILL.md
chezmoi/dot_claude/skills/aws-cli/: SKILL.md
chezmoi/dot_claude/skills/claude-scripts/: SKILL.md
chezmoi/dot_claude/skills/codex-verifier/: SKILL.md  executable_codex_verify.py
chezmoi/dot_claude/skills/fetch/: SKILL.md  pyproject.toml
chezmoi/dot_claude/skills/fetch/scripts/: fetch_url.py.tmpl  (+1 more)
chezmoi/dot_claude/skills/fstar/: SKILL.md
chezmoi/dot_claude/skills/github-actions-runs/: SKILL.md
chezmoi/dot_claude/skills/jujutsu/: SKILL.md
chezmoi/dot_claude/skills/learning-style/: SKILL.md
chezmoi/dot_claude/skills/loglens/: SKILL.md
chezmoi/dot_claude/skills/mise/: SKILL.md
chezmoi/dot_claude/skills/pr-context-review/: SKILL.md
chezmoi/dot_claude/skills/repo-backlog-bootstrap/: SKILL.md
chezmoi/dot_claude/skills/signals-pipeline-resources/: private_SKILL.md
chezmoi/dot_claude/skills/telemetry-redrive/: SKILL.md
chezmoi/dot_claude/skills/use-gh-cli/: SKILL.md
chezmoi/dot_claude/skills/using-linear/: SKILL.md
chezmoi/dot_codex/: AGENTS.md  config.toml  config.toml.tmpl  private_config.toml
chezmoi/dot_codex/prompts/: empty_persistence.md
chezmoi/dot_config/: starship.toml
chezmoi/dot_config/atuin/: private_config.toml.tmpl
chezmoi/dot_config/certs/: encrypted_node-extra-ca.pem.age
chezmoi/dot_config/git/: ignore
chezmoi/dot_config/jj/: empty_config.toml.tmpl
chezmoi/dot_config/kitty/: clipboard.py  kitty.conf
chezmoi/dot_config/mise/: config.toml  config.toml.tmpl  empty_config.toml
chezmoi/dot_config/nvim/: empty_init.lua
chezmoi/dot_config/nvim/lua/: empty_plugins.lua
chezmoi/dot_config/private_karabiner/: private_karabiner.json
chezmoi/dot_config/restic-backup/: config.toml.tmpl  excludes.txt
chezmoi/dot_config/watchman/: watchman.json  watchmanconfig-universal.json
chezmoi/dot_config/yt-dlp/: config
chezmoi/dot_config/zed/: private_settings.json  private_tasks.json  tasks.json
chezmoi/dot_config/zellij/: config.kdl
chezmoi/dot_cursor/: private_mcp.json
chezmoi/dot_hammerspoon/: init.lua
chezmoi/dot_zsh/completions/: _erd
chezmoi/private_Library/private_Application Support/private_Claude/: encrypted_claude_desktop_config.json.age
chezmoi/private_Library/private_Application Support/private_jj/: config.toml.tmpl
chezmoi/private_Library/private_LaunchAgents/: empty_com.asimi.atuindaemon.plist  empty_com.asimi.resticbackup.plist
chezmoi/private_Library/private_Preferences/: private_com.googlecode.iterm2.plist  private_com.googlecode.iterm2.private.plist
chezmoi/private_dot_ssh/: config.tmpl
config/: .Makefile.swp  Dockerfile.iosevka  Makefile  font-patcher  iosevka-run.sh  private-build-plans.toml
config/iterm2/: com.googlecode.iterm2.plist
config/iterm2-yov3bc/: com.googlecode.iterm2.plist
doom.d/: config.el  init.el  packages.el
fonts/iosevka-custom/: .gitignore  Dockerfile  Dockerfile.iosevka  Makefile  patch-fonts  private-build-plans.toml
hammerspoon/: init.lua
hammerspoon/pushToTalk/: init.lua
pythonbin/: .gitignore  .python-version  Makefile  README.md  pyproject.toml
pythonbin/pythonbin/command/: command.py
pythonbin/pythonbin/epub/: chromadb_utils.py  cli.py  db.py  embeddings.py  epub.py  models.py  parser.py  script.py  store.py  utils.py  vebooklib.py
pythonbin/pythonbin/extract/: extract.py
pythonbin/pythonbin/gh/: changelog.py  ghlib.py  ghreview.py  linears.py  models.py
pythonbin/pythonbin/git/: commit_message_generator.py  operations.py  pull_request_generator.py  update_workspace.py
pythonbin/pythonbin/google/: gdoc.py
pythonbin/pythonbin/jira/: adf_parser.py  client.py  conversation_manager.py  llm_client.py  llm_functions.py  main.py  model.py  parser.py
pythonbin/pythonbin/jira_info/: main.py
pythonbin/pythonbin/linear/: linear.py
pythonbin/pythonbin/lint/: lint.py
pythonbin/pythonbin/llm/: client.py
pythonbin/pythonbin/load/: load.py
pythonbin/pythonbin/logs/: compress.py
pythonbin/pythonbin/pdfocr/: pdfocr.py
pythonbin/pythonbin/releasenotes/: releasenotes.py
pythonbin/pythonbin/scraper/: scrape.py
pythonbin/pythonbin/screen/: screen.py
pythonbin/pythonbin/slackdump/: .gitignore  slackdump.py
pythonbin/pythonbin/transcript/: config.py  conftest.py  main.py  model.py  parser.py  transcript.py
pythonbin/pythonbin/transcript/observer/: llm_observer.py  llm_tools.py  observer.py  openai_callable.py
pythonbin/pythonbin/transcript/tests/: test_parser.py  test_watcher.py
pythonbin/pythonbin/updater/: updater.py
pythonbin/pythonbin/vaider/: vaider.py
pythonbin/pythonbin/vtreesitter/: build.py  parser.py
pythonbin/scripts/: dev-setup.sh
pythonbin/src/pythonbin/: __init__.py
pythonbin/tests/epub/: test_parser.py
pythonbin/tests/jira/: test_adf_parser.py
(+35 files in other folders)
