[project]
name = "pythonbin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.34.1",
    "beautifulsoup4>=4.12.3",
    "boilerpy3>=1.0.7",
    "chromadb>=0.5.5",
    "dateparser>=1.2.0",
    "ebooklib>=0.18",
    "gitpython>=3.1.43",
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "html5lib>=1.1",
    "inscriptis>=2.5.0",
    "instructor>=1.3.2",
    "intervaltree>=3.1.0",
    "ipdb>=0.13.13",
    "jira>=3.8.0",
    "jupyter>=1.0.0",
    "librosa>=0.10.2.post1",
    "litellm>=1.43.19",
    "markdown-it-py>=3.0.0",
    "markdown>=3.7",
    "marvin>=2.3.7",
    "mdformat>=0.7.17",
    "mistletoe>=1.4.0",
    "numpy>=1.26.4",
    "numpydoc>=1.8.0",
    "ollama>=0.3.1",
    "opencv-python>=4.10.0.84",
    "pathspec>=0.12.1",
    "pillow>=10.4.0",
    "playwright>=1.46.0",
    "psutil>=6.0.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.8.2",
    "pynput>=1.7.7",
    "pyscreeze>=1.0.1",
    "rich>=13.7.1",
    "scipy>=1.13.1",
    "semver>=3.0.2",
    "spacy>=3.7.5",
    "tiktoken>=0.7.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.44.2",
    "tree-sitter>=0.21.3",
    "watchdog>=4.0.2",
    "zstandard>=0.23.0",
    "unstructured[all-docs]>=0.16.23",
    "olmocr>=0.1.58",
    "openai>=1.57.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "deepdiff>=7.0.1",
    "pyright>=1.1.377",
    "pytest>=8.3.2",
    "ruff-lsp>=0.0.55",
    "ruff>=0.6.2",
]
